<resources>
    <string name="app_name">CloudyTest</string>
    <string name="step_1_3">step 1/3</string>
    <string name="pi">Personal Info</string>
    <string name="Man">Man</string>
    <string name="Woman">Woman</string>
    <string name="Height">Height</string>
    <string name="Age">Age</string>
    <string name="Okay">Okay</string>
    <string name="step_2_3">Step 2/3</string>
    <string name="g">Geolocation</string>
    <string name="Share_your_location">Share your location</string>
    <string name="We_use">We use your location data for the most accurate forecasts</string>
    <string name="Allow">Allow</string>
    <string name="step_3_3">Step 3/3</string>
    <string name="notifications">notifications</string>
    <string name="Notifications">Notification</string>
    <string name="Degrees">+13</string>
    <string name="Perm">Perm</string>
    <string name="humidity">humidity</string>
    <string name="wind">wind</string>
    <string name="humidity_value">78%</string>
    <string name="wind_value">4mc</string>
    <string name="open_weather_maps_app_id">f27d5d2a24dd4bfe1e783fdf24aaca8b</string>
    <string name="etemp">sensible temperature</string>
    <string name="headgear">Headgear:</string>
    <string name="body">Body:</string>
    <string name="bottom">Bottom:</string>
    <string name="shoes">Shoes:</string>
</resources>