<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/main_activity_yellow_frame"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:background="#FFFFCB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />

    <ImageView
        android:id="@+id/main_activity_update"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/update"
        app:layout_constraintEnd_toEndOf="@id/main_activity_yellow_frame"
        app:layout_constraintTop_toTopOf="@id/main_activity_yellow_frame" />
    <TextView
        android:id="@+id/main_activity_yellow_degrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Degrees"
        android:textAppearance="@style/Degrees"
        app:layout_constraintBottom_toBottomOf="@id/main_activity_yellow_frame"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_yellow_frame"
        app:layout_constraintStart_toStartOf="@id/main_activity_yellow_frame"
        app:layout_constraintTop_toTopOf="@id/main_activity_yellow_frame"
        />
    <View
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:background="@drawable/degree"
        app:layout_constraintTop_toTopOf="@id/main_activity_yellow_degrees"
        app:layout_constraintStart_toEndOf="@id/main_activity_yellow_degrees"
        />
    <ImageView
        android:id="@+id/main_activity_yellow_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/main_activity_yellow_geo"
        app:layout_constraintTop_toTopOf="@id/main_activity_yellow_geo"
        app:layout_constraintStart_toStartOf="@id/main_activity_yellow_degrees"
        app:layout_constraintEnd_toStartOf="@id/main_activity_yellow_icon"
        android:src="@drawable/shape"
        />
    <TextView
        android:id="@+id/main_activity_yellow_geo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Perm"
        app:layout_constraintStart_toEndOf="@id/main_activity_yellow_icon"
        app:layout_constraintBottom_toTopOf="@id/main_activity_yellow_degrees"
        android:textAppearance="@style/Geo"
        />
    <TextView
        android:id="@+id/main_activity_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/main_activity_yellow_degrees"
        app:layout_constraintTop_toBottomOf="@id/main_activity_yellow_degrees"
        app:layout_constraintEnd_toStartOf="@id/main_activity_wind"
        android:text="@string/humidity"
        android:textAppearance="@style/wind"
        />
    <TextView
        android:id="@+id/main_activity_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/main_activity_humidity"
        app:layout_constraintTop_toBottomOf="@id/main_activity_yellow_degrees"
        android:layout_marginStart="20dp"
        android:text="@string/wind"
        android:layout_marginLeft="20dp"
        android:textAppearance="@style/wind"
        />
    <TextView
        android:id="@+id/main_activity_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_humidity"
        app:layout_constraintStart_toStartOf="@id/main_activity_humidity"
        android:textAppearance="@style/wind_value"
        android:text="@string/humidity_value"

        />
    <TextView
        android:id="@+id/main_activity_wind_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/wind_value"
        android:text="@string/wind_value"
        app:layout_constraintTop_toBottomOf="@id/main_activity_wind"
        app:layout_constraintStart_toStartOf="@id/main_activity_wind"
        />
    <TextView
        android:id="@+id/main_activity_e_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/main_activity_yellow_degrees"
        app:layout_constraintTop_toBottomOf="@id/main_activity_humidity_value"
        android:text="@string/etemp"
        android:textAppearance="@style/wind"
        />
    <TextView
        android:id="@+id/main_activity_e_temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_e_temp"
        app:layout_constraintStart_toStartOf="@id/main_activity_e_temp"
        android:textAppearance="@style/wind_value"
        android:text="@string/humidity_value"

        />
    <TextView
        android:id="@+id/main_activity_headgear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_yellow_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_activity_headgear_image"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/headgear"
        android:textAppearance="@style/headgear"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/main_activity_headgear_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/main_activity_headgear"
        app:layout_constraintStart_toStartOf="@id/main_activity_headgear"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/main_activity_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_headgear_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/body"
        android:textAppearance="@style/headgear"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/main_activity_body_image"
        />
    <ImageView
        android:id="@+id/main_activity_body_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/main_activity_body"
        app:layout_constraintStart_toStartOf="@id/main_activity_headgear"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/main_activity_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_body_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/bottom"
        android:textAppearance="@style/headgear"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/main_activity_bottom_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/main_activity_bottom"
        app:layout_constraintStart_toStartOf="@id/main_activity_headgear"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/main_activity_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_activity_bottom_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/shoes"
        android:textAppearance="@style/headgear"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/main_activity_shoes_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/main_activity_shoes"
        app:layout_constraintStart_toStartOf="@id/main_activity_headgear"
        android:layout_marginTop="10dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>