<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Step2Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/maps"
        />
    <View
        android:id="@+id/step3_activity_hat"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:background="#4168FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step3_activity_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_2_3"
        android:textAppearance="@style/hat_text"
        app:layout_constraintStart_toStartOf="@+id/step3_activity_hat"
        app:layout_constraintEnd_toEndOf="@+id/step3_activity_hat"
        app:layout_constraintBottom_toBottomOf="@+id/step3_activity_hat"
        app:layout_constraintTop_toTopOf="@+id/step3_activity_hat"
        />
    <View
        android:id="@+id/step3_activity_ellipse1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/ellipse"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_step3"
        app:layout_constraintBottom_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintStart_toStartOf="@id/step3_activity_step3"
        app:layout_constraintEnd_toStartOf="@id/step3_activity_ellipse2"
        app:layout_constraintHorizontal_chainStyle="spread"
        />
    <View
        android:id="@+id/step3_activity_ellipse2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/ellipse"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_step3"
        app:layout_constraintBottom_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintStart_toEndOf="@id/step3_activity_ellipse1"
        app:layout_constraintEnd_toStartOf="@id/step3_activity_ellipse3"

        />
    <View
        android:id="@+id/step3_activity_ellipse3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/ellipse"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_step3"
        app:layout_constraintBottom_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintStart_toEndOf="@id/step3_activity_ellipse2"
        app:layout_constraintEnd_toEndOf="@id/step3_activity_step3"
        />
    <TextView
        android:id="@+id/step1_activity_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g"
        android:textAppearance="@style/main_text"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintBottom_toTopOf="@+id/step1_activity_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        />
    <View
        android:id="@+id/step2_activity_list"
        android:layout_width="0dp"
        android:layout_height="416dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step1_activity_g"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        android:background="#FFFFFF"


        />
    <ImageView
        android:id="@+id/step2_activity_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cloud"
        app:layout_constraintTop_toTopOf="@id/step2_activity_list"
        app:layout_constraintStart_toStartOf="@id/step2_activity_list"
        app:layout_constraintEnd_toEndOf="@id/step2_activity_list"
        android:layout_marginTop="40dp"

        />
    <TextView
        android:id="@+id/step2_activity_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/step2_activity_cloud"
        app:layout_constraintStart_toStartOf="@id/step2_activity_list"
        app:layout_constraintEnd_toEndOf="@id/step2_activity_list"
        android:text="@string/Share_your_location"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/Info_title"
        />
    <TextView
        android:id="@+id/step2_activity_share2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/step2_activity_share"
        app:layout_constraintStart_toStartOf="@id/step2_activity_list"
        app:layout_constraintEnd_toEndOf="@id/step2_activity_list"
        app:layout_constraintBottom_toTopOf="@id/step2_activity_allow"
        android:text="@string/We_use"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/Info"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="78dp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/step2_activity_allow"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:backgroundTint="#4168FF"
        android:text="@string/Allow"
        android:textAppearance="@style/hat_text"
        app:layout_constraintTop_toBottomOf="@id/step2_activity_share2"
        app:layout_constraintBottom_toBottomOf="@id/step2_activity_list"
        app:layout_constraintStart_toStartOf="@id/step2_activity_list"
        app:layout_constraintEnd_toEndOf="@id/step2_activity_list"
        android:layout_margin="46dp"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:backgroundTint="#4168FF"
        android:text="@string/Okay"
        android:textAppearance="@style/hat_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>