<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Step1Activity">

    <!-- hat -->
    <View
        android:id="@+id/step3_activity_hat"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:background="#4168FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step3_activity_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_1_3"
        android:textAppearance="@style/hat_text"
        app:layout_constraintStart_toStartOf="@+id/step3_activity_hat"
        app:layout_constraintEnd_toEndOf="@+id/step3_activity_hat"
        app:layout_constraintBottom_toBottomOf="@+id/step3_activity_hat"
        app:layout_constraintTop_toTopOf="@+id/step3_activity_hat"
        />
    <View
        android:id="@+id/step3_activity_ellipse1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/ellipse"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_step3"
        app:layout_constraintBottom_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintStart_toStartOf="@id/step3_activity_step3"
        app:layout_constraintEnd_toStartOf="@id/step3_activity_ellipse2"
        app:layout_constraintHorizontal_chainStyle="spread"
        />
    <View
        android:id="@+id/step3_activity_ellipse2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/ellipse"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_step3"
        app:layout_constraintBottom_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintStart_toEndOf="@id/step3_activity_ellipse1"
        app:layout_constraintEnd_toStartOf="@id/step3_activity_ellipse3"

        />
    <View
        android:id="@+id/step3_activity_ellipse3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/ellipse"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_step3"
        app:layout_constraintBottom_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintStart_toEndOf="@id/step3_activity_ellipse2"
        app:layout_constraintEnd_toEndOf="@id/step3_activity_step3"
        />
    <TextView
        android:id="@+id/step3_activity_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pi"
        android:textAppearance="@style/main_text"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_hat"
        app:layout_constraintBottom_toTopOf="@+id/step1_activity_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        />

    <View
        android:id="@+id/step1_activity_gender"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/step3_activity_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="39dp"
        />
    <View
        android:id="@+id/step1_activity_male"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#4168FF"
        app:layout_constraintStart_toStartOf="@id/step1_activity_gender"
        app:layout_constraintTop_toTopOf="@id/step1_activity_gender"
        app:layout_constraintBottom_toBottomOf="@id/step1_activity_gender"
        app:layout_constraintEnd_toStartOf="@id/step1_activity_female"
        />
    <TextView
        android:id="@+id/step1_activity_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Man"
        android:textAppearance="@style/hat_text"
        app:layout_constraintStart_toStartOf="@id/step1_activity_male"
        app:layout_constraintTop_toTopOf="@id/step1_activity_male"
        app:layout_constraintBottom_toBottomOf="@id/step1_activity_male"
        app:layout_constraintEnd_toEndOf="@id/step1_activity_male"
        />

    <View
        android:id="@+id/step1_activity_female"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/step1_activity_male"
        app:layout_constraintTop_toTopOf="@id/step1_activity_gender"
        app:layout_constraintBottom_toBottomOf="@id/step1_activity_gender"
        app:layout_constraintEnd_toEndOf="@id/step1_activity_gender"
        />
    <TextView
        android:id="@+id/step1_activity_woman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Woman"
        android:textAppearance="@style/gray_text"
        app:layout_constraintStart_toStartOf="@id/step1_activity_female"
        app:layout_constraintTop_toTopOf="@id/step1_activity_female"
        app:layout_constraintBottom_toBottomOf="@id/step1_activity_female"
        app:layout_constraintEnd_toEndOf="@id/step1_activity_female"
        />

    <TextView
        android:id="@+id/step1_activity_height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step1_activity_gender"
        android:text="@string/Height"
        android:layout_margin="24dp"
        android:textAppearance="@style/main_text2"
        app:layout_constraintBottom_toTopOf="@+id/step1_activity_height_edit"
        />
    <EditText
        android:id="@+id/step1_activity_height_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/step1_activity_height_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        />
    <TextView
        android:id="@+id/step1_activity_age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step1_activity_height_edit"
        android:text="@string/Age"
        android:layout_margin="24dp"
        android:textAppearance="@style/main_text2"
        />
    <EditText
        android:id="@+id/step1_activity_age_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/step1_activity_age_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        />
    <Button
        android:id="@+id/step1_activity_okay"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:backgroundTint="#4168FF"
        android:text="@string/Okay"
        android:textAppearance="@style/hat_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>